--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
       box-sizing: border-box;
       margin: 0;
       padding: 0;
-      font-family: "Segoe UI", sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     }
     .container {
-      padding: 1rem;
       max-width: 800px;
       margin: 0 auto;
+      padding: 1rem;
     }
   </style>
   <body>
