--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
     }
   </style>
   <body>
-    <div class="container">
-      <h1>Users Connect</h1>
-      <p>Simple user listing</p>
-    </div>
+    <div id="root"></div>
     <script src="./src/index.ts"></script>
   </body>
 </html>
