--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
     }
   </style>
   <body>
-    <div id="root"></div>
+    <main class="container">
+      <header>
+        <h1>Users Connect</h1>
+      </header>
+      <div id="root"></div>
+    </main>
     <script src="./src/index.ts"></script>
   </body>
 </html>
